--- a/login/build.gradle
+++ b/login/build.gradle
@@ -2,24 +2,32 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+
+
+
     defaultConfig {
-        applicationId "com.loong.componentdemo"
+        applicationId "com.loong.login"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
