--- a/login/gradle.properties
+++ b/login/gradle.properties
@@ -11,7 +11,4 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-compile_sdk_version = 27
-support_version = 25.2.0
-min_sdk_version = 15
-target_sdt_version = 27
+isRunAlone=false
